Fix project type overlap

--- a/sass/site/primary/_portfolio.scss
+++ b/sass/site/primary/_portfolio.scss
@@ -104,7 +104,6 @@
 
 		a {
 			display: block;
-			line-height: 0;
 		}
 	}
 
